# sso

./: LICENSE  README.md
backend/: .gitignore  Cargo.toml  README.md  Rocket.toml
backend/migrations/2017-02-28-131021_create_schema/: down.sql
backend/migrations/2017-02-28-131500_create_table_roles/: down.sql
backend/migrations/2017-02-28-132619_insert_rows_roles/: down.sql  up.sql
backend/migrations/2017-02-28-142016_create_table_groups/: down.sql  up.sql
backend/migrations/2017-02-28-142041_insert_rows_group/: down.sql  up.sql
backend/migrations/2017-02-28-142043_create_table_users/: up.sql
backend/migrations/2017-02-28-142047_create_table_group_users/: down.sql  up.sql
backend/migrations/2017-02-28-142057_create_table_group_roles/: down.sql  up.sql
backend/migrations/2017-02-28-142067_insert_rows_group_roles/: down.sql  up.sql
backend/migrations/2017-02-28-163234_create_table_accounts/: down.sql  up.sql
backend/migrations/2017-03-01-083551_create_table_contact_types/: down.sql
backend/migrations/2017-03-01-083557_insert_rows_contact_types/: down.sql
backend/migrations/2017-03-01-084638_create_table_contacts/: up.sql
backend/migrations/2017-03-02-022305_create_table_countries/: up.sql
backend/migrations/2017-03-02-022310_create_table_provinces/: down.sql  up.sql
backend/migrations/2017-03-02-022315_create_table_cities/: down.sql  up.sql
backend/migrations/2017-03-02-022325_create_table_genders/: down.sql  up.sql
backend/migrations/2017-03-02-023357_insert_rows_genders/: down.sql  up.sql
backend/migrations/2017-03-12-025820_create_table_profiles/: down.sql  up.sql
backend/migrations/2017-03-19-071104_create_table_applications/: up.sql
backend/migrations/2017-05-01-150002_create_table_scopes/: up.sql
backend/migrations/2017-05-01-231647_create_table_authorizations/: up.sql
backend/migrations/2017-05-02-150458_create_table_tickets/: up.sql
backend/migrations/20170228131021_create_schema/: up.sql
backend/migrations/20170228131500_create_table_roles/: up.sql
backend/migrations/20170228132619_insert_rows_roles/: down.sql  up.sql
backend/migrations/20170228133134_create_table_users/: down.sql  up.sql
backend/migrations/20170301083551_create_table_contact_types/: up.sql
backend/migrations/20170301083557_insert_rows_contact_types/: up.sql
backend/src/: config.rs  config.toml.sample  config_parser.rs  lib.rs  main.rs
backend/src/common/: mod.rs
backend/templates/: index.html.hbs
backend/tests/: common.rs  mod.rs
(+313 files in other folders)
