[package]
name = "backend"
version = "0.1.0"
authors = ["Jacob Chang <mrchangji@outlook.com>"]

[dependencies]
error-chain="*"
toml = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
serde_repr = "*"
rand = "*"
url = "*"
hex = "*"
md5 = "*"
argon2rs = "*"
chrono = { version = "*", features = ["serde"] }
mime = "*"
lettre = "*"
lettre_email = "*"
rocket = "0.4.1"
rocket_codegen = "0.4.1"
rocket_contrib = { version="0.4.1", features = ["json", "handlebars_templates"] }
jsonwebtoken = { version="*" }
redis = "*"
postgres = { version = "*", features = ["with-chrono", "with-uuid", "with-serde_json"] }
uuid = { version = "0.5", features = ["serde", "v4", "v5"] }
r2d2 = "*"
r2d2_redis = "*"
r2d2_postgres = "*"
qrcodegen = "*"
base32 = "*"
oath = "*"
time = "*"